# async_arch_course

1/: README.md
services/: accounting_errors_strategy.md  docker-compose.yml  jira_id_changes.md
services/accounting_service/: Dockerfile  alembic.ini  pyproject.toml
services/accounting_service/db/alembic/: env.py
services/accounting_service/db/alembic/versions/: 640c2f3e21c1_initial.py  78cea44fb262_initial.py
services/accounting_service/src/: logger.py  start.py
services/accounting_service/src/api_server/app/: app.py  dependency.py
services/accounting_service/src/domain/entities/: __init__.py  billing_cycle.py  money.py  payment.py  task.py  transaction.py  worker.py
services/accounting_service/src/domain/interfaces/: __init__.py  bank_client.py  email_client.py  message_broker.py  tasks_repository.py  transactions_repository.py  workers_repository.py
services/accounting_service/src/domain/usecases/: __init__.py
services/analytics_service/: Dockerfile  alembic.ini  pyproject.toml
services/analytics_service/db/alembic/: env.py
services/analytics_service/db/alembic/versions/: 43719a7fd545_initial.py
services/analytics_service/src/: environment.py  logger.py  start.py
services/analytics_service/src/api_server/app/: app.py  dependency.py
services/analytics_service/src/domain/: __init__.py
services/analytics_service/src/domain/entities/: __init__.py  money.py  task.py  transaction.py  worker.py
services/analytics_service/src/domain/interfaces/: __init__.py  tasks_repository.py  transactions_repository.py  workers_repository.py
services/analytics_service/src/domain/usecases/: __init__.py
services/auth_service/: Dockerfile  alembic.ini  client.py  docker-compose.yml  pyproject.toml
services/auth_service/db/alembic/: env.py
services/auth_service/src/: environment.py  logger.py  start.py
services/auth_service/src/domain/: __init__.py
services/event_schema_registry/: pyproject.toml
services/event_schema_registry/schema_registry/: __init__.py  events.py  registry.py
services/event_schema_registry/schema_registry/schemas/payouts/done/: 1.json
services/event_schema_registry/schema_registry/schemas/task_costs/created/: 1.json
services/event_schema_registry/schema_registry/schemas/tasks/added/: 1.json
services/event_schema_registry/schema_registry/schemas/tasks/assigned/: 1.json
services/event_schema_registry/schema_registry/schemas/tasks/closed/: 1.json
services/event_schema_registry/schema_registry/schemas/tasks/completed/: 1.json
services/event_schema_registry/schema_registry/schemas/tasks/created/: 1.json  2.json
services/event_schema_registry/schema_registry/schemas/tasks/updated/: 1.json
services/event_schema_registry/schema_registry/schemas/transactions/deposit_applied/: 1.json
services/event_schema_registry/schema_registry/schemas/transactions/payment_applied/: 1.json
services/event_schema_registry/schema_registry/schemas/transactions/withdrawal_applied/: 1.json
services/event_schema_registry/schema_registry/schemas/workers/created/: 1.json
services/task_tracking_service/: Dockerfile  alembic.ini  client.py  pyproject.toml
services/task_tracking_service/db/: add_jira_id.py
services/task_tracking_service/db/alembic/: env.py
services/task_tracking_service/db/alembic/versions/: 87b2081b3363_initial.py  8ff2d595b933_add_jira_id.py  a04fb413bbaa_initial.py  ac5dadce511d_initial.py
services/task_tracking_service/src/: logger.py  start.py
services/task_tracking_service/src/api_server/: __init__.py  server.py
services/task_tracking_service/src/api_server/app/: app.py  dependency.py
services/task_tracking_service/src/api_server/app/routes/: __init__.py
services/task_tracking_service/src/api_server/app/routes/event/: models.py  workers.py
services/task_tracking_service/src/api_server/app/routes/http/: __init__.py  task.py
services/task_tracking_service/src/api_server/app/schema/object/: task.py
services/task_tracking_service/src/api_server/app/schema/request/: __init__.py  add_task.py  close_task.py  complete_task.py
services/task_tracking_service/src/api_server/app/schema/response/: __init__.py  add_task.py  get_tasks_for_worker.py  get_worker_tasks.py
services/task_tracking_service/src/domain/entities/: __init__.py  task.py  worker.py
services/task_tracking_service/src/domain/interfaces/: __init__.py  message_broker.py  tasks_repository.py  workers_event_bus.py  workers_repository.py
services/task_tracking_service/src/domain/usecases/: __init__.py
services/task_tracking_service/src/domain/usecases/add_task/: __init__.py  add_task.py
services/task_tracking_service/src/domain/usecases/add_worker/: __init__.py  add_worker.py
services/task_tracking_service/src/domain/usecases/close_task/: __init__.py  close_task.py
services/task_tracking_service/src/domain/usecases/complete_task/: __init__.py  complete_task.py
services/task_tracking_service/src/domain/usecases/get_tasks_for_worker/: __init__.py  get_tasks_for_worker.py
services/task_tracking_service/src/domain/usecases/get_worker_tasks/: __init__.py  get_worker_tasks.py
services/task_tracking_service/src/domain/usecases/reassign_tasks/: __init__.py  reassign_tasks.py
(+98 files in other folders)
